# Totalnew-3

./: FUSION_DETECTION.md  LLAP失效场景报告.md  README.md  Teager-Kaiser包络算法迁移指南.md  analyze_energy.py  analyze_llap_failure.py  build.gradle.kts  collect_threshold_logs.sh  export_llap_logs.sh  llap_failure_report.txt  local.properties.example  measure_top_mic_baseline.sh  stop_logging.sh  test_audio_source.sh  test_fused_detection.py  超声波噪音消除技术说明.md  驻波守卫融合策略修改说明.md
LLAP-master/: export_recordings.bat  setup_top_speaker_and_mic.sh  view_recording_logs.bat  音频测距原理文档.md
LLAP-master/app/: CMakeLists.txt  build.gradle
LLAP-master/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  RangeFinder.cpp  native_audio.cpp
bat/: push-wavfile-to-phone.bat  setup_top_speaker_and_mic.bat  tinycap-bot-mic.bat  tinycap-dual-mic.bat  tinycap-top-mic.bat  tinyplay-bot-spk.bat  tinyplay-dual-spk.bat  tinyplay-top-spk.bat
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: CM7_tinyplay.bat  CM7_tinyplay.bat运行结果.txt  cleanup_audio_config.sh  cm7_tinycap.bat  cm7_tinycap.bat运行结果.txt  force_top_mic_loop.sh  monitor_mic_status.sh  quick_setup_mic.sh  reset_audio_hardware.sh  run_ultrasonic_app.sh  setup_audio_hardware.sh  setup_top_speaker_and_mic.sh  start_app_with_top_mic.sh  test_microphone_location.sh  test_speaker_direct.sh  test_speaker_location.sh  tinycap-top-mic.sh  verify_audio_config.sh
tmp/llap_logs/llap_logs/: llap_debug_20260318_223607.csv  (+1 more)
(+31 files in other folders)
